add_executable(U00-E06  main.cpp Estructuras/ArbolBinario.h Estructuras/Cola.h Estructuras/HashEntry.h
        Estructuras/HashMap.h Estructuras/HashMapList.h Estructuras/Lista.h Estructuras/Nodo.h Estructuras/NodoArbol.h
        Estructuras/Pila.h Estructuras/ColaPrioridad.h Estructuras/nodoPrioridad.h Funciones.h)
